k8s/base/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: peermetrics
spec:
  ports:
    - name: http
      port: 8081
      targetPort: 8081
  selector:
    app: peermetrics-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: peermetrics-api
  namespace: peermetrics
spec:
  replicas: 2
  selector:
    matchLabels:
      app: peermetrics-api
  template:
    metadata:
      labels:
        app: peermetrics-api
    spec:
      containers:
        - name: api
          image: peermetrics/api:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              name: http
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "1"
              memory: "1Gi"
